# RPIQA

./: LICENSE  README.md  pyproject.toml  recompile_rp_programs.py
examples/: example.ipynb
src/: RPIQA.py
src/pyrpiqa/: __init__.py  pyrpiqa.py
src/pyrpiqa/rp_src/: acquire  configure  configure.c
src/rp_src/: Makefile  acquire.c
